--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,5 +4,5 @@ runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
-# sqlconn = root:password@tcp(127.0.0.1:3306)/ecommerce
-sqlconn = adepa:Ad33p@@friq22@tcp(localhost:3306)/ecommerce
+sqlconn = root:password@tcp(127.0.0.1:3306)/ecommerce
+# sqlconn = adepa:Ad33p@@friq22@tcp(localhost:3306)/ecommerce
