--- a/conf/app.conf
+++ b/conf/app.conf
@@ -5,5 +5,7 @@ autorender = false
 copyrequestbody = true
 EnableDocs = true
 # sqlconn = root:password@tcp(127.0.0.1:3306)/ecommerce
-sqlconn = adepa:Ad33p@@friq22@tcp(localhost:3306)/ecommerce
+# sqlconn = adepa:Ad33p@@friq22@tcp(localhost:3306)/ecommerce
 # sqlconn = kori:m72SLeuJL7qN233!@tcp(localhost:3306)/ecommerce
+# sqlconn = root:password@tcp(127.0.0.1:3306)/AMC
+sqlconn = "AMCUser:Jg9lQDHS]Fh0U(0G<Rm0@tcp(localhost:3306)/AMC_database"
