update customer's last transaction date

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,6 +4,7 @@ runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
+customerBaseUrl = http://localhost:8083
 # sqlconn = root:password@tcp(127.0.0.1:3306)/ecommerce
 # sqlconn = adepa:Ad33p@@friq22@tcp(localhost:3306)/ecommerce
 # sqlconn = kori:m72SLeuJL7qN233!@tcp(localhost:3306)/ecommerce
