--- a/conf/app.conf
+++ b/conf/app.conf
@@ -11,4 +11,5 @@ itemsBaseUrl = http://localhost:8082
 # sqlconn = kori:m72SLeuJL7qN233!@tcp(localhost:3306)/ecommerce
 # sqlconn = root:password@tcp(127.0.0.1:3306)/AMC
 # sqlconn = "AMCUser:Jg9lQDHS]Fh0U(0G<Rm0@tcp(localhost:3306)/AMC_database"
-sqlconn = "AMCUser:Jg9lQDHS]Fh0U(0G<Rm0@tcp(localhost:3306)/AMC_prod_database"
+# sqlconn = "AMCUser:Jg9lQDHS]Fh0U(0G<Rm0@tcp(localhost:3306)/AMC_prod_database"
+sqlconn = msys:Msys@24gh@tcp(localhost:3306)/msysmobilizer
