--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,15 +1,17 @@
 appname = transaction_service
-httpport = 8085
+# httpport = 8085
+# Maku Foods Port
+httpport = 4085
 runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
-customerBaseUrl = http://localhost:8083
-itemsBaseUrl = http://localhost:8082
+customerBaseUrl = http://localhost:4083
+itemsBaseUrl = http://localhost:4082
 # sqlconn = root:password@tcp(127.0.0.1:3306)/ecommerce
 # sqlconn = adepa:Ad33p@@friq22@tcp(localhost:3306)/ecommerce
-# sqlconn = kori:m72SLeuJL7qN233!@tcp(localhost:3306)/ecommerce
+sqlconn = kori:m72SLeuJL7qN233!@tcp(localhost:3306)/maku_foods
 # sqlconn = root:password@tcp(127.0.0.1:3306)/AMC
 # sqlconn = "AMCUser:Jg9lQDHS]Fh0U(0G<Rm0@tcp(localhost:3306)/AMC_database"
 # sqlconn = "AMCUser:Jg9lQDHS]Fh0U(0G<Rm0@tcp(localhost:3306)/AMC_prod_database"
-sqlconn = msys:Msys@24gh@tcp(localhost:3306)/msysmobilizer
+# sqlconn = msys:Msys@24gh@tcp(localhost:3306)/msysmobilizer
