git key changes

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,11 +28,16 @@ jobs:
               GIT_PASSWORD: ${{ secrets.GIT_PASSWORD }}
               SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
       run: |
-        sshpass -p "$SSH_PASSWORD" ssh -o StrictHostKeyChecking=no root@185.211.5.90 << 'EOF'
-          set -e  # Exit on any error
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
+        chmod 600 ~/.ssh/id_ed25519
+
+        ssh -o StrictHostKeyChecking=no root@185.211.5.90 << 'EOF'
+          set -e
           cd /usr/app/mobile-application/ecommerce_transaction_service
           git stash
-          git pull origin msysmobilizer  # Use branch explicitly
+          git pull origin msysmobilizer
           go build -o transaction-service
-          pm2 restart transaction-service || pm2 start transaction-service --name transaction-service
+          pm2 restart transaction-service || \
+          pm2 start transaction-service --name transaction-service
         EOF
